--- a/zsh/config
+++ b/zsh/config
@@ -8,6 +8,9 @@ export EDITOR='mvim'
 export PATH="~/bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 
+#set to enable color in ls etc.
+export CLICOLOR='YES'
+
 fpath=(~/.zsh/functions $fpath)
 
 autoload -U ~/.zsh/functions/*(:t)
